Add exact match delete/mark/unmark.
When deleting/marking/unmarking, if the keyword
provided matches exactly with one or more tasks,
then the command will be applied to all of those
tasks.

Partial matches, on the other hand, only allow for
1 match. This is to prevent the user from accidentally
typing 'delete a' and deleting half their tasks.