@@ -11,6 +11,12 @@ import myne.task.Task;
  * A class to encapsulate the logic for unmarking a task and parsing the command for doing so.
  */
 public class UnmarkCommand implements Command {
+    private static final String UNMARK_MESSAGE = "Ah, you would like to redo it? Very well.";
+    private static final String USAGE = """
+            Usage:
+            unmark <task_number>
+            unmark <task_name>""";
+
     private final TaskList taskList;
     private final TaskStorage storage;
     private final String parameters;
@@ -30,61 +36,110 @@ public class UnmarkCommand implements Command {
 
     /**
      * Unmarks the task from Myne's task list and saves it to the file.
-     * @throws InvalidCommandException If the index provided is not an integer.
-     * @throws IndexOutOfBoundsException If the index provided is less than 1 or more than the task list size.
+     * @throws InvalidCommandException If the parameters are empty.
+     * @throws MyneException If the index provided is less than 1 or more than the task list size.
      */
     @Override
-    public Response execute() throws InvalidCommandException, IndexOutOfBoundsException {
-        if (parameters.trim().isEmpty()) {
-            throw new InvalidCommandException("I cannot unmark nothing.", MyneFace.MYNE_DISGUSTED, Myne.MYNE_NAME);
+    public Response execute() throws InvalidCommandException, MyneException {
+        if (parameters.isBlank()) {
+            throw new InvalidCommandException(
+                    "I cannot unmark nothing, can I?\n\n" + USAGE, MyneFace.MYNE_DISGUSTED, Myne.MYNE_NAME);
         }
 
+        // If the parameter is an integer, then we unmark by task index.
         if (CommandParser.isNumeric(parameters)) {
             return unmarkByIndex();
-        } else {
-            return unmarkByKeyword();
         }
+
+        /* If the parameter is not an integer, we treat it as find-then-unmark.
+         * If exact matches are found, then we unmark all of them.
+         * Otherwise, for partial matches, there must be exactly 1 task that was found.
+         * We don't want the user to type "unmark a" and accidentally unmark half of their tasks.
+         */
+
+        // Try to find exact matches first
+        TaskList findResultExact = taskList.findExact(parameters);
+        if (!findResultExact.isEmpty()) {
+            return unmarkByExactMatches(findResultExact);
+        }
+
+        return unmarkByPartialMatch();
     }
 
-    // This method must be used only if the parameter is guaranteed to be an integer.
+    /**
+     * Treats <code>this.parameters</code> as an index, and unmarks the (index - 1) task from <code>this.taskList</code>.
+     * @return a response showing which task was unmarked.
+     */
     private Response unmarkByIndex() {
         try {
             int index = Integer.parseInt(parameters) - 1;
             taskList.unmark(index);
             storage.saveTasks(taskList);
 
-            return new Response("Ah, you would like to redo it? Very well.\n\n" + taskList.get(index).toString(),
+            return new Response(UNMARK_MESSAGE + "\n\n" + taskList.get(index).toString(),
                     Status.SUCCESS,
-                    MyneFace.MYNE_DEFAULT,
+                    MyneFace.MYNE_CONFUSED,
                     Myne.MYNE_NAME);
 
         } catch (IndexOutOfBoundsException e) {
             throw new MyneException("Oh my! It seems that you only have tasks 1 to "
                     + taskList.size()
                     + " at present.",
-                    MyneFace.MYNE_CONFUSED,
+                    MyneFace.MYNE_WONDER,
                     Myne.MYNE_NAME);
         }
     }
 
-    private Response unmarkByKeyword() {
-        TaskList findResult = taskList.find(parameters);
-
-        // There must be exactly 1 task to unmark when unmarking by keyword.
-        if (findResult.isEmpty()) {
-            throw new InvalidCommandException("You have no such task.", MyneFace.MYNE_WORRIED, Myne.MYNE_NAME);
+    /**
+     * Unmarks all the tasks contained in <code>tl</code> from <code>this.taskList</code> and returns a response.
+     * @param tl The <code>TaskList</code> containing the tasks to unmark.
+     * @return the response showing which tasks were unmarked.
+     */
+    private Response unmarkByExactMatches(TaskList tl) {
+        StringBuilder sb = new StringBuilder(UNMARK_MESSAGE).append("\n\n");
+        for (int i = 0; i < tl.size() - 1; i++) {
+            Task taskToUnmark = tl.get(i);
+            taskToUnmark.unmark();
+            sb.append(taskToUnmark).append("\n");
         }
-        if (findResult.size() > 1) {
-            throw new InvalidCommandException(
-                    "Which task? Please be more specific.", MyneFace.MYNE_WORRIED, Myne.MYNE_NAME);
-        }
-
-        Task taskToUnmark = findResult.get(0);
+        Task taskToUnmark = tl.get(tl.size() - 1);
         taskToUnmark.unmark();
+        sb.append(taskToUnmark); // Last line doesn't need newline.
 
-        return new Response("Ah, you would like to redo it? Very well.\n\n" + taskToUnmark.toString(),
+        storage.saveTasks(taskList);
+
+        return new Response(sb.toString(),
                 Status.SUCCESS,
                 MyneFace.MYNE_DEFAULT,
                 Myne.MYNE_NAME);
+    }
+
+    /**
+     * Finds a task from <code>this.taskList</code> that partially match <code>this.parameters</code> and, if exactly
+     * 1 task is found, unmarks it.
+     * @return a response showing which task was unmarked.
+     */
+    private Response unmarkByPartialMatch() {
+        TaskList findResult = taskList.findMatching(parameters);
+        // There must be exactly 1 task to unmark when unmarking by keyword.
+        if (findResult.isEmpty()) {
+            throw new MyneException("You have no such task.", MyneFace.MYNE_DISGUSTED, Myne.MYNE_NAME);
+        }
+
+        if (findResult.size() > 1) {
+            throw new MyneException(
+                    "More than 1 task match that name. Please be more specific.",
+                    MyneFace.MYNE_WORRIED, Myne.MYNE_NAME);
+        }
+
+        // Unmark the sole task that was found.
+        Task taskToUnmark = findResult.get(0);
+        taskToUnmark.unmark();
+        storage.saveTasks(taskList);
+
+        return new Response(UNMARK_MESSAGE + "\n\n" + taskToUnmark.toString(),
+                Status.SUCCESS,
+                MyneFace.FERDINAND_HAPPY,
+                Myne.FERDINAND_NAME);
     }
 }
